--- a/mobile.css
+++ b/mobile.css
@@ -36,7 +36,7 @@ body {
     background: var(--white);
     border-radius: 50% ;
     position: relative;
-    border: 4px solid var(--black);
+    border: 3px solid var(--black);
     z-index: 4;
 }
 .eye-left {
@@ -44,7 +44,7 @@ body {
     height: 50px;
     background: var(--black);
     position: absolute;
-    top: 90px;
+    top: 100px;
     left: calc(32% - 25px);
     border-radius: 50%;
     box-shadow: 70px 0px 0px 0px, 35px 50px 0.5px -15px; 
@@ -65,7 +65,7 @@ body {
     position: absolute;
     background: var(--yellow);
     border-radius: 150px 150px 0 0;
-    border: 4px solid;
+    border: 3px solid;
     margin-top: 20px;
     
 }
@@ -92,25 +92,26 @@ body {
     width: 120px;
     height: 80px;
     background: var(--white);
-    border-radius: 15%;
-    border: 4px solid var(--black);
+    border-radius: 30%;
+    border: 3px solid var(--black);
     position: absolute;
     top: calc(75% - 10px);
     z-index: 2;
+    box-shadow: 0px 20px 0px rgb(255, 255, 255);
 }
 .teeth {
     width: 120px;
     height: 60px;
-    border: 4px solid black;
-    border-radius: 15%;
+    border: 2px solid black;
+    border-radius: 30%;
     position: absolute;
     top: calc(75% - 62px);
-    left: -4px;
+    left: -3px;
 }
 .teeth-2 {
     width: 44px;
     height: 80px;
-    border: 4px solid black;
+    border: 2px solid black;
     border-radius: 10%;
     position: absolute;
     top: calc(75% - 58px);
